--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,12 @@
 .nav {
     grid-area: nav;
     background-color: red;
+    padding: 20px;
 }
 .item > a{
     color: white;
     text-decoration: none;
 }
-.item .active > a{
-    color: green;
+.item a.active{
+    color: gold;
 }
